--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,21 +5,23 @@ services:
     image: redis
     ports:
       - 6379:6379
-    network_mode: host
+    networks:
+      - redis
 
   worker:
     image: anroots/webmon
     build:
       context: .
     command:
-      - 'rq'
-      - 'worker'
-      - "-u 'redis://redis'"
+      - 'python'
+      - 'worker.py'
+      - "--rhost=redis"
     depends_on:
       - redis
-    network_mode: host
     environment:
       - FLEEP_HOOK=
+    networks:
+      - redis
 
   certstream:
     image: anroots/webmon
@@ -28,11 +30,14 @@ services:
     command:
       - "python"
       - "main.py"
-      - "--rhost=localhost"
+      - "--rhost=redis"
       - "--tld=ee"
       - "--tld=com"
-    network_mode: host
+    networks:
+      - redis
 
     depends_on:
       - redis
 
+networks:
+  redis:
