Debug scan scheduling logic

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,6 +67,7 @@ services:
       - '--mysql-password=H7dgsQf3bawjNpDdZi6NLGC'
       - '--tld=fi'
       - '--tld=ee'
+      - '--tld=eu'
 
   app-db:
     image: mariadb:10
