--- a/webmon/composer.json
+++ b/webmon/composer.json
@@ -12,6 +12,7 @@
         "campo/random-user-agent": "^1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
+        "laravel/horizon": "^2.2",
         "laravel/tinker": "^1.0",
         "predis/predis": "^1.1",
         "spatie/laravel-tags": "^2.2",
