--- a/webmon/.env.example
+++ b/webmon/.env.example
@@ -40,7 +40,7 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 
-# Minimum interval of time (in minutes) between scans of one domain
-WEBMON_MIN_INTERVAL=4320
+# Minimum interval of time (in days) between scans of one domain
+WEBMON_MIN_INTERVAL=3
 
 WEBMON_RENOTIFY_INTERVAL=43800
