--- a/webmon/composer.json
+++ b/webmon/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "campo/random-user-agent": "^1.3",
         "fideloper/proxy": "^4.0",
+        "jeremykendall/php-domain-parser": "^5.5",
         "laravel/framework": "5.7.*",
         "laravel/horizon": "^2.2",
         "laravel/tinker": "^1.0",
