Schedule refresh of new domains

--- a/webmon/.env.example
+++ b/webmon/.env.example
@@ -44,3 +44,8 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 WEBMON_MIN_INTERVAL=3
 
 WEBMON_RENOTIFY_INTERVAL=43800
+
+
+# Accessing CT domain import list
+#CT_PASSWORD=
+#CT_USERNAME=
